--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
             "homepage": "http://hiqdev.com/"
         }
     ],
+    "require-dev": {
+        "hiqdev/yii2-collection": "*"
+    },
     "autoload": {
         "psr-4": {
             "hidev\\license\\": "src"
