--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -17,7 +17,7 @@ package:
 
 require:
     hiqdev/hidev-php:           "*@dev"
-    hiqdev/hidev-hiqdev:        "*@dev"
+    hiqdev/hidev-vendor:        "*@dev"
     hiqdev/hidev-license:       "*@dev"
     hiqdev/hidev-phpunit:       "*@dev"
     hiqdev/hidev-travis-ci:     "*@dev"
