--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ sudo: false
 install:
     - 'travis_retry composer self-update 1.0.0-alpha11'
     - 'travis_retry composer global require "fxp/composer-asset-plugin:~1.1" "yiisoft/yii2-composer:~2.0"'
-    - 'wget http://hiqdev.com/hidev/hidev.phar && chmod a+x hidev.phar'
     - 'travis_retry composer global require "codeception/codeception:*" "fabpot/php-cs-fixer:*" "phpunit/phpunit-skeleton-generator:*" "phpunit/phpunit:^4.8"'
     - 'travis_retry composer install --no-interaction'
-    - './hidev.phar travis/install'
+    - './vendor/bin/hidev travis/install'
 script:
-    - './hidev.phar travis/script'
+    - './vendor/bin/hidev travis/script'
+after_script:
+    - 'if [ $TRAVIS_PHP_VERSION = "5.6" ]; then travis_retry wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi'
