--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     ],
     "require-dev": {
         "hiqdev/hidev": "*@dev",
+        "minii/core": "*",
         "hiqdev/yii2-pluginmanager": "*"
     },
     "autoload": {
