--- a/.scutinizer.yml
+++ b/.scutinizer.yml
@@ -1,4 +1,5 @@
 tools:
-    php_code_coverage: true
+    php_code_coverage:
+        enabled: true
     external_code_coverage:
         timeout: 600
