--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -21,5 +21,6 @@ require:
     hiqdev/hidev-license:       "*@dev"
     hiqdev/hidev-phpunit:       "*@dev"
     hiqdev/hidev-travis-ci:     "*@dev"
+    hiqdev/hidev-scrutinizer:   "*@dev"
     hiqdev/hidev-codeception:   "*@dev"
     hiqdev/hidev-php-cs-fixer:  "*@dev"
