redoing with yii2-extraconfig

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
             "homepage": "http://hiqdev.com/"
         }
     ],
+    "require": {
+        "hiqdev/composer-extension-plugin": "*@dev"
+    },
     "require-dev": {
         "hiqdev/hidev": "*@dev",
         "hiqdev/yii2-pluginmanager": "*"
@@ -50,5 +53,8 @@
         "psr-4": {
             "hidev\\license\\": "src"
         }
+    },
+    "extra": {
+        "yii2-extraconfig": "src/yii2-extraconfig.php"
     }
 }
