renamed goals -> controllers, get -> take

--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,7 @@
         "hiqdev/composer-extension-plugin": "*@dev"
     },
     "require-dev": {
-        "hiqdev/hidev": "*@dev",
-        "hiqdev/yii2-pluginmanager": "*"
+        "hiqdev/hidev": "*@dev"
     },
     "autoload": {
         "psr-4": {
