--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@ matrix:
 cache:
     directories:
         - $HOME/.composer/cache
+before_install:
+    - 'composer self-update'
 sudo: false
 install:
-    - 'travis_retry composer global require "fabpot/php-cs-fixer:*" "phpunit/phpunit-skeleton-generator:*" "phpunit/phpunit:^4.8"'
     - 'travis_retry composer install --no-interaction'
     - './vendor/bin/hidev travis/install'
 script:
     - './vendor/bin/hidev travis/script'
 after_script:
-    - 'if [ $TRAVIS_PHP_VERSION = "5.6" ]; then travis_retry wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi'
+    - './vendor/bin/hidev travis/after_script'
