--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,8 @@
         }
     },
     "extra": {
-        "extension-config": "src/extension-config.php"
+        "extension-plugin": {
+            "hidev-config": "src/hidev-config.php"
+        }
     }
 }
