fixed require for `hiqdev/composer-extension-plugin`

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         }
     ],
     "require": {
-        "hiqdev/composer-extension-plugin": "*@dev"
+        "hiqdev/composer-extension-plugin": "^0.0.6"
     },
     "require-dev": {
         "hiqdev/hidev": "*@dev"
