--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "hiqdev/composer-extension-plugin": "^0.0.6"
     },
     "require-dev": {
-        "hiqdev/hidev": "*@dev"
+        "hiqdev/hidev": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -57,5 +57,11 @@
         "extension-plugin": {
             "hidev-config": "src/hidev-config.php"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.hiqdev.com"
+        }
+    ]
 }
