--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,18 @@
         }
     ],
     "require": {
-        "hiqdev/composer-extension-plugin": "~0.0"
+        "hiqdev/composer-config-plugin": "*@dev"
     },
     "require-dev": {
-        "hiqdev/hidev": "dev-master"
+        "hiqdev/hidev": "dev-master",
+        "hiqdev/hidev-php": "dev-master",
+        "hiqdev/hidev-hiqdev": "dev-master",
+        "hiqdev/hidev-readme": "dev-master",
+        "hiqdev/hidev-travis": "dev-master",
+        "hiqdev/hidev-phpunit": "dev-master",
+        "hiqdev/hidev-composer": "dev-master",
+        "hiqdev/hidev-scrutinizer": "dev-master",
+        "hiqdev/hidev-php-cs-fixer": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -54,14 +62,14 @@
         }
     },
     "extra": {
-        "extension-plugin": {
-            "hidev-config": "src/hidev-config.php"
+        "config-plugin": {
+            "hidev": "src/config/hidev.php"
         }
     },
     "repositories": [
         {
             "type": "composer",
-            "url": "https://asset-packagist.hiqdev.com"
+            "url": "https://asset-packagist.org"
         }
     ]
 }
