--- a/hidev.yml
+++ b/hidev.yml
@@ -1,15 +1,19 @@
 package:
     type:           yii2-extension
     name:           hidev-license
-    title:          License plugin for HiDev
+    title:          HiDev plugin for license generation
     headline:       HiDev License
     keywords:       license, hidev, plugin
     description:    |
-        [HiDev](https://github.com/hiqdev/hidev) is a task runner, code generator and build tool for easier continuos integration.
+        [HiDev] is the automation tool mixed with code generator for easier continuous development.
+
         This plugin enables LICENSE generation support for HiDev.
 
         Provides templates for many standart licenses:
 
-        - open source licenses: MIT, BSD and more from [choosealicense.com](http://choosealicense.com/licenses/)
+        - open source licenses: MIT, BSD and more from [choosealicense.com]
         - ['no license'](http://choosealicense.com/licenses/no-license/) license
         - basic proprietary license
+
+        [hidev]: https://github.com/hiqdev/hidev
+        [choosealicense.com]: http://choosealicense.com/licenses/
